# bazel-java

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel  dependencies.yaml  java.bazelproject  maven_dependencies.yaml  maven_install.json  rules_jvm_external~5.2~maven~maven_install.json  update_dependencies.sh
bazel/: main.bzl  test.bzl
bzl/: test.bzl
containers/: BUILD.bazel
kubernetes/: example-rest.yaml
module1/src/main/java/com/gautam/package1/: BUILD  Main.java
module1/src/test/java/com/gautam/package1/: BUILD  Main2Test.java  MainTest.java
module2/src/main/java/com/gautam/package2/: BUILD
module2/src/test/java/com/gautam/package2/: BUILD  FooTest.java
package1/: BUILD
package1/src/main/java/com/gautam/package1/: Main.java
package2/: BUILD
package2/src/main/java/com/gautam/package2/: Foo.java
scripts/: BUILD  BUILD.bazel  format_all.sh  update_dependencies.sh
src/main/java/com/example/example/: BUILD  BUILD.bazel  ExampleComponent.java  ExampleMain.java  ExampleModule.java
src/main/java/com/example/package1/: BUILD  BUILD.bazel  Main.java
src/main/java/com/example/package2/: BUILD  BUILD.bazel  Foo.java
src/main/java/com/example/rest/: BUILD  BUILD.bazel  GetNameHandler.java  RestRoutes.java  RestServer.java  RestServerMain.java
src/main/java/com/example/rest/counter/: BUILD  BUILD.bazel  VisitorRecords.java
src/main/java/com/gautam/example/: BUILD  ExampleComponent.java  ExampleMain.java  ExampleModule.java
src/main/java/com/gautam/package1/: BUILD  Main.java
src/main/java/com/gautam/package2/: BUILD  Foo.java
src/main/java/com/gautam/rest/: BUILD  RestRoutes.java  RestServer.java  RestServerMain.java
src/main/resources/: BUILD  log4j2.xml
src/test/java/com/example/bench/: BUILD  BUILD.bazel  ExampleBenchmark.java  SanitizeBenchmark.java
src/test/java/com/example/leak/: BUILD  LeakyFunction.java  LeakyFunctionBenchmark.java
src/test/java/com/example/package1/: BUILD  BUILD.bazel  Main2Test.java  MainTest.java  MyITCase.java  MyLibrary.java
src/test/java/com/example/package2/: BUILD  BUILD.bazel  FooTest.java
src/test/java/com/gautam/package1/: BUILD  Main2Test.java  MainTest.java  MyITCase.java  MyLibrary.java
src/test/java/com/gautam/package2/: BUILD  FooTest.java
tools/: bazel.rc
