load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

java_test_suite(
    name = "package2",
    srcs = ["FooTest.java"],
    test_suffixes = [
        "Test.java",
        "ITCase.java",
    ],
    deps = [
        "//src/main/java/com/example/package2",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ],
)
